k8s-istio/routing-rules/api-gateway-service-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-service
spec:
  hosts:
  - api-gateway-service
  gateways:
  - banking-example-gateway
  http:
  - route:
    - destination:
        host: api-gateway-service
        port:
          number: 8080
---
