k8s-istio/routing-rules/customer-service-100-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service
spec:
  hosts:
  - customer-service
  gateways:
  - banking-example-gateway
  http:
  - route:
    - destination:
        host: customer-service
        subset: v2
        port:
          number: 8081
---
